force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <label>Quote.</label>
    <nameField>
        <displayFormat>QT-{000000}</displayFormat>
        <label>QUOTE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>