force-app/main/default/objects/Quote__c/fields/AmountInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountInclTaxLocal__c</fullName>
    <label>AMOUNT INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>