force-app/main/default/objects/Quote__c/fields/AmountInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountInclTaxUSD__c</fullName>
    <label>AMOUNT INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>