force-app/main/default/objects/Quote__c/fields/AmountOfTaxBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxBuyingLocal__c</fullName>
    <label>AMOUNT OF TAX-BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>