force-app/main/default/objects/Quote__c/fields/AmountOfTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxLocal__c</fullName>
    <label>AMOUNT OF TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>