force-app/main/default/objects/Quote__c/fields/AmountOfTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxUSD__c</fullName>
    <label>AMOUNT OF TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>