force-app/main/default/objects/Quote__c/fields/AttentionPrioritySignal__c.field-meta.xml
<CustomField>
    <fullName>AttentionPrioritySignal__c</fullName>
    <formula>IMAGE(
CASE(AttentionPriorityNumber__c,
0, &quot;/img/samples/light_green.gif&quot;,
1, &quot;/img/samples/light_yellow.gif&quot;,
2, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>0: Unit Price &gt; Standard Selling Price in Service
1: Min Selling Price in Service&lt; Unit Price&lt;Standard Selling Price in Service
2: Min Selling Price in Service&gt; Unit Price
Approval: 0(Auto Approved), 1(Manual Approved), 2(Auto Rejected)</inlineHelpText>
    <label>Attention Priority(Signal)</label>
    <type>Text</type>
</CustomField>