force-app/main/default/objects/Quote__c/fields/BuyingAmountInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>BuyingAmountInclTaxLocal__c</fullName>
    <label>AMOUNT BUYING INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>