force-app/main/default/objects/Quote__c/fields/BuyingAmountInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyingAmountInclTaxUSD__c</fullName>
    <label>AMOUNT BUYING INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>