force-app/main/default/objects/Quote__c/fields/CargoMode__c.field-meta.xml
<CustomField>
    <fullName>CargoMode__c</fullName>
    <label>CARGO MODE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CargoMode</valueSetName>
    </valueSet>
</CustomField>