force-app/main/default/objects/Quote__c/fields/CarrierVendor__c.field-meta.xml
<CustomField>
    <fullName>CarrierVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARRIER/VENDOR</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QUOTE (CARRIER/VENDOR)</relationshipLabel>
    <relationshipName>CarrerVendor</relationshipName>
    <type>Lookup</type>
</CustomField>