force-app/main/default/objects/Quote__c/fields/CntrTypeQnty__c.field-meta.xml
<CustomField>
    <fullName>CntrTypeQnty__c</fullName>
    <label>CONTAINER TYPE*QUANTITY</label>
    <type>TextArea</type>
</CustomField>