force-app/main/default/objects/Quote__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>CONDITION</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>