force-app/main/default/objects/Quote__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <label>DELIVERY ADDRESS</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>