force-app/main/default/objects/Quote__c/fields/DocOperator__c.field-meta.xml
<CustomField>
    <fullName>DocOperator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Operator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>