force-app/main/default/objects/Quote__c/fields/ExchangeRateID__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateID__c</fullName>
    <label>EXCHANGE RATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>