force-app/main/default/objects/Quote__c/fields/ExternalSales__c.field-meta.xml
<CustomField>
    <fullName>ExternalSales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXTERNAL SALES</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>QUOTE (EXTERNAL SALES)</relationshipLabel>
    <relationshipName>QuoteExternalSales</relationshipName>
    <type>Lookup</type>
</CustomField>