force-app/main/default/objects/Quote__c/fields/ForwardingServiceRequired__c.field-meta.xml
<CustomField>
    <fullName>ForwardingServiceRequired__c</fullName>
    <label>Forwarding Service Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ForwardingServiceRequired</valueSetName>
    </valueSet>
</CustomField>