force-app/main/default/objects/Quote__c/fields/Goods_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Goods_Attachment__c</fullName>
    <label>Goods Attachment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>