force-app/main/default/objects/Quote__c/fields/mm_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>mm_CompanyName__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Company_Name__c</formula>
    <label>MAIL MERGE COMPANY NAME</label>
    <type>Text</type>
</CustomField>