force-app/main/default/objects/Quote__c/fields/mm_CompanyPhone__c.field-meta.xml
<CustomField>
    <fullName>mm_CompanyPhone__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Company_Phone__c</formula>
    <label>MAIL MERGE COMPANY PHONE</label>
    <type>Text</type>
</CustomField>