force-app/main/default/objects/Quote__c/fields/mm_LocalCompanyAddress__c.field-meta.xml
<CustomField>
    <fullName>mm_LocalCompanyAddress__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Local_Company_Address__c</formula>
    <label>MAIL MERGE LOCAL COMPANY ADDRESS</label>
    <type>Text</type>
</CustomField>