force-app/main/default/objects/Quote__c/fields/mm_QuotePICFax__c.field-meta.xml
<CustomField>
    <fullName>mm_QuotePICFax__c</fullName>
    <formula>QuotePIC__r.Fax</formula>
    <label>MAIL MERGE QUOTE PIC FAX</label>
    <type>Text</type>
</CustomField>