force-app/main/default/objects/Quote__c/fields/mm_QuotePICMobile__c.field-meta.xml
<CustomField>
    <fullName>mm_QuotePICMobile__c</fullName>
    <formula>QuotePIC__r.MobilePhone</formula>
    <label>MAIL MERGE QUOTE PIC MOBILE</label>
    <type>Text</type>
</CustomField>