force-app/main/default/objects/Quote__c/fields/mm_QuotePICPhone__c.field-meta.xml
<CustomField>
    <fullName>mm_QuotePICPhone__c</fullName>
    <formula>QuotePIC__r.Phone</formula>
    <label>MAIL MERGE QUOTE PIC PHONE</label>
    <type>Text</type>
</CustomField>