force-app/main/default/objects/Quote__c/fields/mm_RequesterEmail__c.field-meta.xml
<CustomField>
    <fullName>mm_RequesterEmail__c</fullName>
    <formula>PICOfRequesterCompany__r.Email</formula>
    <label>MAIL MERGE REQUESTER EMAIL</label>
    <type>Text</type>
</CustomField>