force-app/main/default/objects/Quote__c/fields/mm_RequesterFax__c.field-meta.xml
<CustomField>
    <fullName>mm_RequesterFax__c</fullName>
    <formula>PICOfRequesterCompany__r.Fax</formula>
    <label>MAIL MERGE REQUESTER FAX</label>
    <type>Text</type>
</CustomField>