force-app/main/default/objects/Quote__c/fields/mm_RequesterMobile__c.field-meta.xml
<CustomField>
    <fullName>mm_RequesterMobile__c</fullName>
    <formula>PICOfRequesterCompany__r.MobilePhone</formula>
    <label>MAIL MERGE REQUESTER MOBILE</label>
    <type>Text</type>
</CustomField>