force-app/main/default/objects/Quote__c/fields/mm_RequesterPhone__c.field-meta.xml
<CustomField>
    <fullName>mm_RequesterPhone__c</fullName>
    <formula>PICOfRequesterCompany__r.Phone</formula>
    <label>MAIL MERGE REQUESTER PHONE</label>
    <type>Text</type>
</CustomField>