force-app/main/default/objects/Quote__c/fields/Monthtest__c.field-meta.xml
<CustomField>
    <fullName>Monthtest__c</fullName>
    <formula>If(
(ETA__c - ETD__c)/365*12&lt;1,1, (ETA__c - ETD__c)/365*12
)</formula>
    <label>Monthtest</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>