force-app/main/default/objects/Quote__c/fields/NetWeightKG__c.field-meta.xml
<CustomField>
    <fullName>NetWeightKG__c</fullName>
    <label>NET WEIGHT(KG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>