force-app/main/default/objects/Quote__c/fields/NumberofQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>NumberofQuoteLine__c</fullName>
    <label>Number of Quote Line</label>
    <summaryFilterItems>
        <field>QuoteLine__c.Print__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>