force-app/main/default/objects/Quote__c/fields/ParentQuoteID__c.field-meta.xml
<CustomField>
    <fullName>ParentQuoteID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT QUOTE ID</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>CHILD QUOTE</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>