force-app/main/default/objects/Quote__c/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <label>PAYMENT CONDITION</label>
    <type>TextArea</type>
</CustomField>