force-app/main/default/objects/Quote__c/fields/PICOfRequesterCompany__c.field-meta.xml
<CustomField>
    <fullName>PICOfRequesterCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C OF REQUESTER COMPANY</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.RequesterCompany__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>QUOTE</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>