force-app/main/default/objects/Quote__c/fields/PODAOA__c.field-meta.xml
<CustomField>
    <fullName>PODAOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D(A.O.A)</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Quote P.O.D(A.O.A)</relationshipLabel>
    <relationshipName>QuotePODAOA</relationshipName>
    <type>Lookup</type>
</CustomField>