force-app/main/default/objects/Quote__c/fields/ProfitInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitInclTaxLocal__c</fullName>
    <label>PROFIT INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>