force-app/main/default/objects/Quote__c/fields/ProfitIncludeTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitIncludeTaxUSD__c</fullName>
    <label>PROFIT INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>