force-app/main/default/objects/Quote__c/fields/ProfitNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxLocal__c</fullName>
    <label>PROFIT NIC TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>