force-app/main/default/objects/Quote__c/fields/ProfitNICTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxUSD__c</fullName>
    <label>PROFIT NIC TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>