force-app/main/default/objects/Quote__c/fields/ProfitRatioInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioInclTaxLocal__c</fullName>
    <label>PROFIT RATIO INCL TAX(LOCAL)%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>