force-app/main/default/objects/Quote__c/fields/ProfitRatioInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioInclTaxUSD__c</fullName>
    <label>PROFIT RATIO INCL TAX(USD)%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>