force-app/main/default/objects/Quote__c/fields/ProfitRatioNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioNICTaxLocal__c</fullName>
    <label>PROFIT RATIO NIC TAX(LOCAL)%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>