force-app/main/default/objects/Quote__c/fields/ProfitRatioNICTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioNICTaxUSD__c</fullName>
    <label>PROFIT RATIO NIC TAX(USD)%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>