force-app/main/default/objects/Quote__c/fields/QuotationClosing__c.field-meta.xml
<CustomField>
    <fullName>QuotationClosing__c</fullName>
    <label>Quotation Closing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>