force-app/main/default/objects/Quote__c/fields/QuotationOpening__c.field-meta.xml
<CustomField>
    <fullName>QuotationOpening__c</fullName>
    <label>Quotation Opening</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>