force-app/main/default/objects/Quote__c/fields/QuoteIssueDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteIssueDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>QUOTE ISSUE DATE</label>
    <type>Date</type>
</CustomField>