force-app/main/default/objects/Quote__c/fields/QuoteName__c.field-meta.xml
<CustomField>
    <fullName>QuoteName__c</fullName>
    <label>QUOTE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>