force-app/main/default/objects/Quote__c/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <label>QUOTE NUMBER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>