force-app/main/default/objects/Quote__c/fields/QuotePIC__c.field-meta.xml
<CustomField>
    <fullName>QuotePIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QUOTE P.I.C</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>QUOTE1</relationshipName>
    <type>Lookup</type>
</CustomField>