force-app/main/default/objects/Quote__c/fields/QuoteStatus__c.field-meta.xml
<CustomField>
    <fullName>QuoteStatus__c</fullName>
    <label>QUOTE STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QuotoStatus</valueSetName>
    </valueSet>
</CustomField>