force-app/main/default/objects/Quote__c/fields/RequestDetail__c.field-meta.xml
<CustomField>
    <fullName>RequestDetail__c</fullName>
    <label>REQUEST DETAIL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>