force-app/main/default/objects/Quote__c/fields/RequesterCompany__c.field-meta.xml
<CustomField>
    <fullName>RequesterCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REQUESTER COMPANY</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QUOTE</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>