force-app/main/default/objects/Quote__c/fields/RFPRFQID__c.field-meta.xml
<CustomField>
    <fullName>RFPRFQID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFP/RFQ ID</label>
    <referenceTo>RFPRFQ__c</referenceTo>
    <relationshipLabel>QUOTE</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>