force-app/main/default/objects/Quote__c/fields/RollupAmountOfBuyingTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfBuyingTaxLocal__c</fullName>
    <label>ROLLUP AMOUNT OF BUYING TAX(LOCAL)</label>
    <summarizedField>QuoteLine__c.AmountOfBuyingTaxLocal__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>