force-app/main/default/objects/Quote__c/fields/RollupAmountOfBuyingTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfBuyingTaxUSD__c</fullName>
    <label>ROLLUP AMOUNT OF BUYING TAX(USD)</label>
    <summarizedField>QuoteLine__c.AmountOfBuyingTaxUSD__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>