force-app/main/default/objects/Quote__c/fields/RollupAmountOfSellingTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfSellingTaxLocal__c</fullName>
    <label>ROLLUP AMOUNT OF SELLING TAX(LOCAL)</label>
    <summarizedField>QuoteLine__c.AmountOfSellingTaxLocal__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>