force-app/main/default/objects/Quote__c/fields/RollupAmountOfSellingTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfSellingTaxUSD__c</fullName>
    <label>ROLLUP AMOUNT OF SELLING TAX(USD)</label>
    <summarizedField>QuoteLine__c.AmountOfSellingTaxUSD__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>