force-app/main/default/objects/Quote__c/fields/RollupBuyingAmountInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupBuyingAmountInclTaxLocal__c</fullName>
    <label>ROLLUP BUYING AMOUNT INCL TAX(LOCAL)</label>
    <summarizedField>QuoteLine__c.BuyingAmountInclTaxLocal__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>