force-app/main/default/objects/Quote__c/fields/RollupBuyingAmountInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupBuyingAmountInclTaxUSD__c</fullName>
    <label>ROLLUP BUYING AMOUNT INCL TAX(USD)</label>
    <summarizedField>QuoteLine__c.BuyingAmountInclTaxUSD__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>