force-app/main/default/objects/Quote__c/fields/RollupProfitIncludeTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupProfitIncludeTaxUSD__c</fullName>
    <label>ROLLUP PROFIT INCL TAX(USD)</label>
    <summarizedField>QuoteLine__c.ProfitInclTaxUSD__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>