force-app/main/default/objects/Quote__c/fields/RollupProfitNICTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupProfitNICTaxUSD__c</fullName>
    <label>ROLLUP PROFIT NIC TAX(USD)</label>
    <summarizedField>QuoteLine__c.ProfitNICTaxUSD__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>