force-app/main/default/objects/Quote__c/fields/RollupSellingAmountInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupSellingAmountInclTaxLocal__c</fullName>
    <label>ROLLUP SELLING AMOUNT INCL TAX(LOCAL)</label>
    <summarizedField>QuoteLine__c.SellingAmountInclTaxLocal__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>