force-app/main/default/objects/Quote__c/fields/RollupSellingAmountInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupSellingAmountInclTaxUSD__c</fullName>
    <label>ROLLUP SELLING AMOUNT INCL TAX(USD)</label>
    <summarizedField>QuoteLine__c.SellingAmountInclTaxUSD__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>