force-app/main/default/objects/Quote__c/fields/RollupTotalAmountBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalAmountBuyingLocal__c</fullName>
    <label>ROLLUP TOTAL AMOUNT OF BUYING(LOCAL)</label>
    <summarizedField>QuoteLine__c.TotalAmountBuyingLocal__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>