force-app/main/default/objects/Quote__c/fields/RollupTotalAmountBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalAmountBuyingUSD__c</fullName>
    <label>ROLLUP TOTAL AMOUNT OF BUYING(USD)</label>
    <summarizedField>QuoteLine__c.TotalAmountOfBuyingUSD__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>