force-app/main/default/objects/Quote__c/fields/RollupTotalAmountSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalAmountSellingLocal__c</fullName>
    <label>ROLLUP TOTAL AMOUNT OF SELLING(LOCAL)</label>
    <summarizedField>QuoteLine__c.TotalAmountSellingLocal__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>