force-app/main/default/objects/Quote__c/fields/RollupTotalAmountSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalAmountSellingUSD__c</fullName>
    <label>ROLLUP TOTAL AMOUNT OF SELLING(USD)</label>
    <summarizedField>QuoteLine__c.TotalAmountOfSellingUSD__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>