force-app/main/default/objects/Quote__c/fields/SignandSignature__c.field-meta.xml
<CustomField>
    <fullName>SignandSignature__c</fullName>
    <label>Sign and Signature</label>
    <type>TextArea</type>
</CustomField>