force-app/main/default/objects/Quote__c/fields/SubmissionTargetDate__c.field-meta.xml
<CustomField>
    <fullName>SubmissionTargetDate__c</fullName>
    <label>SUBMISSION TARGET DATE</label>
    <type>Date</type>
</CustomField>