force-app/main/default/objects/Quote__c/fields/Sum_Profit_NIC_Tax_Local__c.field-meta.xml
<CustomField>
    <fullName>Sum_Profit_NIC_Tax_Local__c</fullName>
    <label>Sum Profit NIC Tax(Local)</label>
    <summarizedField>QuoteLine__c.Profit_NIC_Tax_Local_For__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>