force-app/main/default/objects/Quote__c/fields/Sum_Rollup_Selling_Amount_incl_Tax_Local__c.field-meta.xml
<CustomField>
    <fullName>Sum_Rollup_Selling_Amount_incl_Tax_Local__c</fullName>
    <label>Sum Selling Amount incl Tax(Local)</label>
    <summarizedField>QuoteLine__c.Selling_Amount_incl_Tax_Local_For__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>