force-app/main/default/objects/Quote__c/fields/Sum_Total_Amount_of_Buying_Local__c.field-meta.xml
<CustomField>
    <fullName>Sum_Total_Amount_of_Buying_Local__c</fullName>
    <label>Sum Total Amount of Buying(Local)</label>
    <summarizedField>QuoteLine__c.Total_Amount_of_Buying_Local_For__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>