force-app/main/default/objects/Quote__c/fields/SumAmountofBuyingTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>SumAmountofBuyingTaxLocal__c</fullName>
    <label>Sum Amount of Buying Tax(Local)</label>
    <summarizedField>QuoteLine__c.AmountofBuyingTaxLocalFor__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>