force-app/main/default/objects/Quote__c/fields/SumAmountofSellingTax_FCY__c.field-meta.xml
<CustomField>
    <fullName>SumAmountofSellingTax_FCY__c</fullName>
    <label>Sum Amount of Selling Tax(FCY)</label>
    <summarizedField>QuoteLine__c.AmountofSellingTaxFCYFor__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>