force-app/main/default/objects/Quote__c/fields/SumBuyingAmountinclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>SumBuyingAmountinclTaxFCY__c</fullName>
    <label>Sum Buying Amount incl Tax(FCY)</label>
    <summarizedField>QuoteLine__c.BuyingAmountinclTaxFCYFor__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>