force-app/main/default/objects/Quote__c/fields/SumProfitinclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>SumProfitinclTaxLocal__c</fullName>
    <label>Sum Profit incl Tax(Local)</label>
    <summarizedField>QuoteLine__c.ProfitINCTaxLocalFor__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>