force-app/main/default/objects/Quote__c/fields/SumProfitINCTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>SumProfitINCTaxFCY__c</fullName>
    <label>Sum Profit INC Tax(FCY)</label>
    <summarizedField>QuoteLine__c.ProfitINCTaxFCYFor__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>