force-app/main/default/objects/Quote__c/fields/SumProfitNICTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>SumProfitNICTaxFCY__c</fullName>
    <label>Sum Profit NIC Tax(FCY)</label>
    <summarizedField>QuoteLine__c.ProfitNICTaxFCYFor__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>