force-app/main/default/objects/Quote__c/fields/SumTotalAmountofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>SumTotalAmountofBuyingFCY__c</fullName>
    <label>Sum Total Amount of Buying(FCY)</label>
    <summarizedField>QuoteLine__c.TotalAmountofBuyingFCYFor__c</summarizedField>
    <summaryForeignKey>QuoteLine__c.QuoteID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>