force-app/main/default/objects/Quote__c/fields/TargetRate__c.field-meta.xml
<CustomField>
    <fullName>TargetRate__c</fullName>
    <label>TARGET RATE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>