force-app/main/default/objects/Quote__c/fields/TotalAmountBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountBuyingUSD__c</fullName>
    <label>TOTAL BUYING AMOUNT(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>