force-app/main/default/objects/Quote__c/fields/TotalAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountLocal__c</fullName>
    <label>TOTAL AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>