force-app/main/default/objects/Quote__c/fields/TotalAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountUSD__c</fullName>
    <label>TOTAL AMOUNT(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>