force-app/main/default/objects/Quote__c/fields/ValidationCondition__c.field-meta.xml
<CustomField>
    <fullName>ValidationCondition__c</fullName>
    <label>Validation Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>