force-app/main/default/objects/Quote__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <label>VALID TO</label>
    <type>Date</type>
</CustomField>