force-app/main/default/objects/Quote__c/fields/VesselFlight__c.field-meta.xml
<CustomField>
    <fullName>VesselFlight__c</fullName>
    <label>VESSEL/FLIGHT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>