force-app/main/default/objects/Quote__c/recordTypes/DomesticLogisticsServiceQuote.recordType-meta.xml
<RecordType>
    <fullName>DomesticLogisticsServiceQuote</fullName>
    <active>true</active>
    <description>Service Quote Line for Domestic Logistics Service</description>
    <label>Domestic Logistics Service Quote</label>
</RecordType>